--- a/Application/hr_project/templates/arhiva.html
+++ b/Application/hr_project/templates/arhiva.html
@@ -166,107 +166,20 @@
   <main>
     <div class="container">
 
-      <form>
-        <div class="col-md-6">
-          <label for="country" class="form-label">An</label>
-          <select class="form-select" id="country" required="">
-            <option value="">Choose...</option>
-            <option>2022-2023</option>
-          </select>
-          <div class="invalid-feedback">
-            Please select a valid country.
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Salveaza</button>
-        </div>
-      </form>
-
       <br>
 
-      <ul>
-        <li>Specializarea Automatică şi Informatică Aplicată (AIA):</li>
-        <ul>
-          <li>Anul 1, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221019_AIA_An1_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230301_AIA_An1_Sem2.pdf">aici</a>;</li>
-          <li>Anul 2, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221025_AIA_An2_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_AIA_An2_Sem2.pdf">aici</a>;</li>
-          <li>Anul 3, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221019_AIA_An3_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230219_AIA_An3_Sem2.pdf">aici</a>;</li>
-          <li>Anul 4, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221011_AIA_An4_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_AIA_An4_Sem2.pdf">aici</a>.</li>
-        </ul>
-        <li>Specializarea Calculatoare cu predare în limba română (CR):</li>
-        <ul>
-          <li>Anul 1, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221010_CSR_An1_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230218_CSR_An1_Sem2.pdf">aici</a>;</li>
-          <li>Anul 2, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221031_CSR_An2_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230216_CSR_An2_Sem2.pdf">aici</a>;</li>
-          <li>Anul 3, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221010_CSR_An3_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230216_CSR_An3_Sem2.pdf">aici</a>;</li>
-          <li>Anul 4, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221008_CSR_An4_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230302_CSR_An4_Sem2.pdf">aici</a>.</li>
-        </ul>
-        <li>Specializarea Calculatoare cu predare în limba engleză (CE):</li>
-        <ul>
-          <li>Anul 1, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221008_CSE_An1_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230218_CSE_An1_Sem2.pdf">aici</a>;</li>
-          <li>Anul 2, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221010_CSE_An2_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230216_CSE_An2_Sem2.pdf">aici</a>;</li>
-          <li>Anul 3, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221010_CSE_An3_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230216_CSE_An3_Sem2.pdf">aici</a>;</li>
-          <li>Anul 4, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221011_CSE_An4_Sem1.pdf">aici</a>,
-            Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230216_CSE_An4_Sem2.pdf">aici</a>.</li>
-        </ul>
-        <li>Specializarea Electronică Aplicată (ELA):
-          <ul>
-            <li>Anul 1, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221019_ELA_An1_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ELA_An1_Sem2.pdf">aici</a>;</li>
-            <li>Anul 2, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221019_ELA_An2_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ELA_An2_Sem2.pdf">aici</a>;</li>
-            <li>Anul 3, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221008_ELA_An3_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ELA_An3_Sem2.pdf">aici</a>;</li>
-            <li>Anul 4, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221008_ELA_An4_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ELA_An4_Sem2.pdf">aici</a>.</li>
-          </ul>
-        </li>
-        <li>Specializările Ingineria Sistemelor Multimedia (ISM):
-          <ul>
-            <li>Anul 1, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221008_ISM_An1_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230301_ISM_An1_Sem2.pdf">aici</a>;</li>
-            <li>Anul 2, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221011_ISM_An2_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ISM_An2_Sem2.pdf">aici</a>;</li>
-            <li>Anul 3, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221016_ISM_An3_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ISM_An3_Sem2.pdf">aici</a>;</li>
-            <li>Anul 4, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221011_ISM_An4_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ISM_An4_Sem2.pdf">aici</a>.</li>
-          </ul>
-        </li>
-        <li>Specializările Mecatronică (MCT):
-          <ul>
-            <li>Anul 1, Semestrul 1 - <a href="/pdf/orar/2022_2023/sem1/20221012_MR_An1_Sem1.pdf">aici</a>, Semestrul 2
-              -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230227_MR_An1_Sem2.pdf">aici</a>;</li>
-            <li>Anul 2, Semestrul 1 -&nbsp;aici, Semestrul 2 -&nbsp;aici;</li>
-            <li>Anul 3, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221011_ROB_An3_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ROB_An3_Sem2.pdf">aici</a>;</li>
-            <li>Anul 4, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221016_MCT_An4_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_MCT_An4_Sem2.pdf">aici</a>.</li>
-          </ul>
-        </li>
-        <li>Specializările Robotică (ROB):
-          <ul>
-            <li>Anul 1, Semestrul 1 - <a href="/pdf/orar/2022_2023/sem1/20221012_MR_An1_Sem1.pdf">aici</a>, Semestrul 2
-              -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230227_MR_An1_Sem2.pdf">aici</a>;</li>
-            <li>Anul 2, Semestrul 1 -&nbsp;aici, Semestrul 2 -&nbsp;aici;</li>
-            <li>Anul 3, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221011_ROB_An3_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_ROB_An3_Sem2.pdf">aici</a>;</li>
-            <li>Anul 4, Semestrul 1 -&nbsp;<a href="/pdf/orar/2022_2023/sem1/20221016_MCT_An4_Sem1.pdf">aici</a>,
-              Semestrul 2 -&nbsp;<a href="/pdf/orar/2022_2023/sem2/20230214_MCT_An4_Sem2.pdf">aici</a>.</li>
-          </ul>
-        </li>
-      </ul>
+    {% block content %}
 
+      <h2>Arhiva</h2>
+      <br>
+    <ul>
+        {% for file in files %}
+            <li><a href="{{ file }}">{{ file }}</a></li>
+        {% endfor %}
+    </ul>
+
+
+{% endblock %}
     </div>
   </main>
 
