--- a/Application/hr_project/templates/pagina_principala.html
+++ b/Application/hr_project/templates/pagina_principala.html
@@ -84,7 +84,7 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li>
-            <a href="#" class="nav-link text-secondary">
+            <a href="http://localhost:8000/pagina_principala" class="nav-link text-secondary">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                 class="bi bi-house d-block mx-auto mb-1" viewBox="0 0 16 16">
                 <path
@@ -95,7 +95,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="nav-link text-white">
+            <a href="http://localhost:8000/orar" class="nav-link text-white">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                 class="bi bi-house d-block mx-auto mb-1" viewBox="0 0 16 16">
                 <path
@@ -106,7 +106,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="nav-link text-white">
+            <a href="http://localhost:8000/situatie_scolara" class="nav-link text-white">
               <svg class="bi d-block mx-auto mb-1" width="24" height="24" fill="currentColor"
                 class="bi bi-house d-block mx-auto mb-1" viewBox="0 0 16 16">
 					<path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5z"/>
@@ -117,7 +117,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="nav-link text-white">
+            <a href="http://localhost:8000/casuta_postala"  class="nav-link text-white">
               <svg class="bi d-block mx-auto mb-1" width="24" height="24" fill="currentColor"
               class="bi bi-house d-block mx-auto mb-1" viewBox="0 0 16 16">
                 <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
@@ -127,7 +127,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="nav-link text-white">
+            <a href="http://localhost:8000/trimitere_mail" class="nav-link text-white">
               <svg class="bi d-block mx-auto mb-1" width="24" height="24" fill="currentColor"
               class="bi bi-house d-block mx-auto mb-1" viewBox="0 0 16 16">
                 <path
@@ -144,9 +144,9 @@
             <img src="https://github.com/mdo.png" alt="mdo" width="64" height="64" class="rounded-circle">
           </a>
           <ul class="dropdown-menu text-small">
-            <li><a class="dropdown-item" href="#">Date Personale</a></li>
-            <li><a class="dropdown-item" href="#">Admin</a></li>
-			<li><a class="dropdown-item" href="#">Arhiva</a></li>
+            <li><a class="dropdown-item" href="http://localhost:8000/date_personale" >Date Personale</a></li>
+            <li><a class="dropdown-item" href="http://localhost:8000/admin">Admin</a></li>
+			<li><a class="dropdown-item" href="http://localhost:8000/arhiva">Arhiva</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
